[gd_scene load_steps=2 format=3 uid="uid://hud"]

[ext_resource type="Script" path="res://scripts/ui/HUD.gd" id="1"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2

[node name="WaveLabel" type="Label" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Wave 0/30"
horizontal_alignment = 1

[node name="LivesLabel" type="Label" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Lives: 20"
horizontal_alignment = 1

[node name="GoldLabel" type="Label" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Gold: 100"
horizontal_alignment = 1

[node name="TimerLabel" type="Label" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "30"
horizontal_alignment = 1

[node name="StartWaveButton" type="Button" parent="TopBar"]
layout_mode = 2
text = "Start Wave"

[node name="BonusLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -30.0
offset_right = 200.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.85, 0.2, 1)
theme_override_font_sizes/font_size = 32
text = ""
horizontal_alignment = 1
vertical_alignment = 1
visible = false
